@@ -8,7 +8,7 @@ use Class::Accessor::Lite (
 );
 use Smart::Args;
 
-use version; our $VERSION = 'v0.5.1';
+use version; our $VERSION = 'v0.5.2';
 
 use App::Koyomi::DataSource::Job::Teng::JobTime;
 
