@@ -10,7 +10,7 @@ use Class::Accessor::Lite (
 
 use App::Koyomi::JobTime::Formatter qw(time2str);
 
-use version; our $VERSION = 'v0.5.1';
+use version; our $VERSION = 'v0.5.2';
 
 1;
 
